<resources>
    <string name="exit">종료</string>
    <string name="exitMainMessage">앱을 종료하시겠습니까?</string>
    <string name="exitMessage">로그아웃하시겠습니까?</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="app_name">6561 관리자</string>
    <string name="id_label">아이디</string>
    <string name="password_label">암호</string>
    <string name="city_code_label">지점코드</string>
    <string name="shop_code_label">가맹점코드</string>
    <string name="password_change_in_shop">비번변경</string>
    <string name="select_label">소속 선택</string>
    <string name="button_label">로그인</string>
    <string name="id_insert_check">ID 관리</string>
    <string name="code_list_check">코드 현황</string>
    <string name="input_user_id">생성할 지점 ID</string>
    <string name="send_button_label">전송</string>
    <string name="main_min_input_label">여기부터</string>
    <string name="main_max_input_label">여기까지</string>
    <string name="modify_current_label">현재 비밀번호</string>
    <string name="modify_new_label">새로운 비밀번호</string>
    <string name="modify_new_check_label">새로운 비밀번호 확인</string>
    <string name="insert_Id">ID 생성</string>
    <string name="modify_pw">비밀번호 변경</string>
    <string name="delete_Id">PW 초기화</string>
    <string name="delete_user_id">초기화 code</string>
    <string name="delete_user_pw">초기화 user_id</string>
    <string name="code_list_id">id</string>
    <string name="code_list_code">code</string>
    <string name="code_list_city_code">city</string>
    <string name="code_list_shop_code">shop</string>
    <string name="code_list_used">used</string>
    <string name="code_list_lp">lp</string>
    <string name="code_check_button_label">조회</string>
    <string name="id_modify_button_label">전송</string>
    <string name="id_list_user_id">user_id</string>
    <string name="login_success">로그인을 성공하였습니다.</string>
    <string name="login_fail">잘못된 비밀번호입니다.</string>
    <string name="user_reset_button_label">회차 \n 초기화</string>
    <string name="code_reset_button_label">코드 \n 초기화</string>
    <string name="input_shop_id">생성할 가맹점 ID</string>
    <string name="hint_quick_find">이동할 코드</string>
    <string name="button_quick_find_label">이동</string>
</resources>