<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShopUserActivity">

    <RadioGroup
        android:id="@+id/checkbox_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/id_layout_shop">

        <RadioButton
            android:id="@+id/id_select_button_shop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/password_change_in_shop" />

        <RadioButton
            android:id="@+id/code_list_button_shop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:text="@string/code_list_check" />
    </RadioGroup>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/id_layout_shop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_shop">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/id_modify_layout_shop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/id_send_button_shop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/current_password_layout_shop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/new_password_layout_shop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/current_password_input_shop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/modify_current_label"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_password_layout_shop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/new_password_check_layout_shop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/current_password_layout_shop">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_password_input_shop"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/modify_new_label"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_password_check_layout_shop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_password_layout_shop">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_password_check_input_shop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/modify_new_check_label"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
            android:id="@+id/id_send_button_shop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/id_modify_button_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_modify_layout_shop" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/code_checked_layout_shop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_layout_shop">


        <Button
            android:id="@+id/code_send_button_shop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/code_check_button_label"
            app:layout_constraintBottom_toTopOf="@+id/label_shop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/label_shop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            app:layout_constraintBottom_toTopOf="@+id/code_list_recyclerview_shop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/code_send_button_shop">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="30dp">

                <TextView
                    android:id="@+id/code_list_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/code_list_id"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/line_code_list_main1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_default="percent"
                    app:layout_constraintWidth_percent="0.1" />

                <View
                    android:id="@+id/line_code_list_main1"
                    android:layout_width="1dp"
                    android:layout_height="48dp"
                    android:layout_centerInParent="true"
                    android:background="#000000"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/code_list_code"
                    app:layout_constraintStart_toEndOf="@id/code_list_id"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/code_list_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/code_list_code"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/line_code_list_main2"
                    app:layout_constraintStart_toEndOf="@id/line_code_list_main1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_default="percent"
                    app:layout_constraintWidth_percent="0.3" />

                <View

                    android:id="@+id/line_code_list_main2"
                    android:layout_width="1dp"
                    android:layout_height="48dp"
                    android:layout_centerInParent="true"
                    android:background="#000000"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/code_list_city_code"
                    app:layout_constraintStart_toEndOf="@id/code_list_code"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:textSize="12dp"
                    android:id="@+id/code_list_city_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/code_list_city_code"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/line_code_list_main3"
                    app:layout_constraintStart_toEndOf="@id/line_code_list_main2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_default="percent"
                    app:layout_constraintWidth_percent="0.1" />

                <View
                    android:id="@+id/line_code_list_main3"
                    android:layout_width="1dp"
                    android:layout_height="48dp"
                    android:layout_centerInParent="true"
                    android:background="#000000"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/code_list_shop_code"
                    app:layout_constraintStart_toEndOf="@id/code_list_city_code"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:textSize="12dp"
                    android:id="@+id/code_list_shop_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/code_list_shop_code"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/line_code_list_main4"
                    app:layout_constraintStart_toEndOf="@id/line_code_list_main3"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_default="percent"
                    app:layout_constraintWidth_percent="0.1" />

                <View
                    android:id="@+id/line_code_list_main4"
                    android:layout_width="1dp"
                    android:layout_height="48dp"
                    android:layout_centerInParent="true"
                    android:background="#000000"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/code_list_used"
                    app:layout_constraintStart_toEndOf="@id/code_list_shop_code"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/code_list_used"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/code_list_used"
                    android:textSize="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/line_code_list_main5"
                    app:layout_constraintStart_toEndOf="@id/line_code_list_main4"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_default="percent"
                    app:layout_constraintWidth_percent="0.1" />

                <View
                    android:id="@+id/line_code_list_main5"
                    android:layout_width="1dp"
                    android:layout_height="48dp"
                    android:layout_centerInParent="true"
                    android:background="#000000"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/code_list_lp"
                    app:layout_constraintStart_toEndOf="@id/code_list_used"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/code_list_lp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/code_list_lp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/line_code_list_main5"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_default="percent"
                    app:layout_constraintWidth_percent="0.2" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/code_list_recyclerview_shop"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_shop" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>